tests/type-errors/bad_at_unknown_label.arl
archetype bad_at_unknown_label

entry anaction () {
  specification {
    postcondition p1 {
      at(l2).a = 0
    }
  }

  effect {
    var a : nat = 0;
    label l1;
    a := 2
  }
}
